services/resonate/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resonate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resonate
  template:
    metadata:
      labels:
        app: resonate
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: resonate
          image: bluetext-resonate:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
              name: api
            - containerPort: 9090
              name: metrics
          readinessProbe:
            tcpSocket:
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12
